// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render with multiple due dates 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontFamily": "Lato-Regular",
          "fontSize": 16,
        },
        undefined,
      ]
    }
  >
    Multiple Due Dates
  </Text>
</View>
`;

exports[`render with multiple due dates 2`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2D3B45",
            "fontFamily": "Lato-Regular",
            "fontSize": 16,
          },
          Object {
            "paddingTop": 4,
          },
        ]
      }
      testID="assignment-details.assignment-dates.due-date-lbl"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontFamily": "Lato-Regular",
              "fontSize": 16,
            },
            Object {
              "fontWeight": "600",
            },
          ]
        }
      >
        Due:
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontFamily": "Lato-Regular",
              "fontSize": 16,
            },
            Object {},
          ]
        }
      >
         May 31, 2037 at 11:59 PM
      </Text>
    </Text>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontFamily": "Lato-Regular",
          "fontSize": 16,
        },
        Object {
          "paddingTop": 4,
        },
      ]
    }
    testID="assignment-details.assignment-dates.due-for-lbl"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2D3B45",
            "fontFamily": "Lato-Regular",
            "fontSize": 16,
          },
          Object {
            "fontWeight": "600",
          },
        ]
      }
    >
      For:
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#2D3B45",
            "fontFamily": "Lato-Regular",
            "fontSize": 16,
          },
          Object {},
        ]
      }
    >
       -
    </Text>
  </Text>
  <View>
    <Text
      style={
        Array [
          Object {
            "color": "#2D3B45",
            "fontFamily": "Lato-Regular",
            "fontSize": 16,
          },
          Object {
            "paddingTop": 4,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontFamily": "Lato-Regular",
              "fontSize": 16,
            },
            Object {
              "fontWeight": "600",
            },
          ]
        }
      >
        Availability:
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontFamily": "Lato-Regular",
              "fontSize": 16,
            },
            Object {},
          ]
        }
      >
         Closed
      </Text>
    </Text>
  </View>
</View>
`;
